# Object-Oriented-Scientific-Computing

Blackbody/: Blackbody.h  CMakeLists.txt  blackbody_radiance.cpp  radiometry.h
Blackbody Plotting/: Blackbody.cpp  Blackbody.h  CMakeLists.txt  SpectralRadiance.eps  SpectralRadiantExitance.eps  radiometry.h  test_blackbody.cpp
BlackbodyFit/: BlackbodyFit.cpp  BlackbodyFit.h  EmissivityGraph.eps  blackbody_fit.cpp
BlackbodyTemperature/: Blackbody.cpp  Blackbody.h  BlackbodyTemperature.cpp  BlackbodyTemperature.h  radiometry.h  test_blackbody_temperature.cpp
BubbleSort/: Sorting.h  test_sorting.cpp
Histogram/: Histogram.cpp  HistogramToCdf.cpp  HistogramToPdf.cpp
Integral/: Integral.h  numerical.h  test_integral.cpp
KeyEncryption/: KeyEncryption.cpp  KeyEncryption.h  test_key_encryption.cpp
Projectile/: CMakeLists.txt  Projectile.cpp  Projectile.h  physics.h  test_projectile.cpp
QuadraticFormula/: CMakeLists.txt  quadratic_formula.cpp
